--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "homepage": "https://byungyeonkim.github.io/habit-tracker/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
